--- a/alpha/website/index.html
+++ b/alpha/website/index.html
@@ -1,4 +1,5 @@
 <html><head><title>alpha</title>
+    <meta http-equiv="refresh" content="0; url=./landing.html">
     </head>
     <body>
         <p>
