--- a/alpha/website/searchComponent.html
+++ b/alpha/website/searchComponent.html
@@ -20,7 +20,7 @@
 
     <script type="module" src="js/components/geocodes_filters.js"></script>
     <script type="module" src="js/components/geocodes_filters_publisher.js"></script>
-    <script type="module" src="js/components/geocodes_filters_searchtypes.js"></script>
+    <script const yaml = require('js-yaml'); src="js/components/geocodes_filters_searchtypes.js"></script>
 </head>
 <body>
 <div class="accordion col-12" id="accordionExample">
