Correct code to enable placenames. Add code to cull empty values

--- a/alpha/website/landing.html
+++ b/alpha/website/landing.html
@@ -47,9 +47,9 @@
         </div>
     </nav>
 
-    <div class="row  mb-3  mt-3">
-        <div class="col-2"></div>
-        <div class="col-6  d-flex justify-content-center">
+    <div class="row  mb-3  mt-3 d-flex justify-content-center">
+
+        <div class="co " >
             <img src="images/blueEConwhite.png" height=66 />
         </div>
 
@@ -57,9 +57,9 @@
 
     <form
 					action="./facetedsearch_live.html" method="GET">
-        <div class="row">
-            <div class="col-2"></div>
-            <div class="input-group mb-3 col-6 d-flex justify-content-center">
+        <div class="row d-flex justify-content-center">
+
+            <div class="input-group mb-3 col-6">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"
 						id="q" name="q"
 								>
@@ -79,9 +79,9 @@
 
             </div>
         </div>
-        <div class="row">
-            <div class="col-2"></div>
-            <div class="input-group mb-3 col-6 d-flex justify-content-center">
+        <div class="row d-flex justify-content-center">
+
+            <div class="input-group mb-3 col-2">
                 <div class="form-check form-check-inline">
                     <input type="radio" id="all" value="all" name="searchTypes" class="form-check-input" checked>
                     <label class="form-check-label" for="all">All</label>
@@ -96,6 +96,7 @@
                 </div>
             </div>
         </div>
+
     </form>
 </div>
 </body>
