--- a/geodex/website/alphasearch.html
+++ b/geodex/website/alphasearch.html
@@ -64,8 +64,10 @@
       <ul>
         <li>ross sea</li>
         <li>acidification</li>
-        <li> CO2</li>
-        <li> basalt</li>
+        <li>CO2</li>
+        <li>Steens Reversal</li>
+        <li>Haugtjern Norway</li>
+        <li>basalt</li>
         <li>IPCC models</li>
         <li>seismic</li>
         <li>sea ice</li>
