--- a/geodex/website/alphasearch.html
+++ b/geodex/website/alphasearch.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>GeoDex: JS-SPARQL search</title>
+  <title>GeoCODES: JS-SPARQL search</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="../img/favicon.png">
@@ -26,7 +26,7 @@
       <div class="row">
         <div class="col-12 center">
           <img src="/img/location2.svg">
-          <h3 style="margin:5px;color:white">geodex</h3>
+          <h3 style="margin:5px;color:white">GeoCODES</h3>
           <h3 style="margin:5px;color:white" class="font-light">a schema.org/Dataset search</h3>
           <!-- 
           <div class="img img-logo center"></div>
