--- a/geodex/website/webapp-rgbcount.html
+++ b/geodex/website/webapp-rgbcount.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>GeoDex: Demo Service Page</title>
+    <title>GeoCODES: Demo Service Page</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/favicon.png">
@@ -53,7 +53,7 @@
             <div class="row">
                 <div class="col-12 center">
                     <img src="./img/location2.svg">
-                    <h3 style="margin:5px;color:white">geodex</h3>
+                    <h3 style="margin:5px;color:white">GeoCODES</h3>
                     <h3 style="margin:5px;color:white" class="font-light">a schema.org/Dataset search</h3>
                     <!-- 
           <div class="img img-logo center"></div>
