new-local about.html

--- a/alpha/website/landing.html
+++ b/alpha/website/landing.html
@@ -37,7 +37,7 @@
                     <a class="nav-link" href="https://graph.geodex.org/blazegraph/#query">SPARQL Endpoint</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://geocodes.earthcube.org/about.html">Help</a>
+                    <a class="nav-link" href="about.html">Help</a>
                 </li>
             </ul>
             <!--            <form class="form-inline my-2 my-lg-0">-->
