--- a/alpha/website/about.html
+++ b/alpha/website/about.html
@@ -2,95 +2,91 @@
 <html>
 
 <head>
-    <title>GeoCODES: About</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="img/favicon.png">
-    <!--
+  <title>GeoCODES: About</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="img/favicon.png">
+	<!--
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/simple-grid.css">
   <link rel="stylesheet" href="css/zc-grid.css">
-    -->
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" href="./css/spacelab/bootstrap.css"/>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/main.css"/>
+	-->
+	<link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet"/>
+	<link rel="stylesheet" href="./css/spacelab/bootstrap.css"/>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/main.css"/>
 
-    <script> function myFunction() {
-        var search = document.getElementById("searchtext").value;
-        var str = '/newsite/search.html?q=' + search;
-        alert(str);
-        window.location.assign(str);
-    }
-    </script>
+  <script> function myFunction() {
+      var search = document.getElementById("searchtext").value;
+      var str = '/newsite/search.html?q=' + search;
+      alert(str);
+      window.location.assign(str);
+    } 
+  </script>
 
-    <link href="https://vjs.zencdn.net/7.7.5/video-js.css" rel="stylesheet"/>
-    <script src="https://vjs.zencdn.net/7.7.5/video.js"></script>
+  <link href="https://vjs.zencdn.net/7.7.5/video-js.css" rel="stylesheet" />
+  <script src="https://vjs.zencdn.net/7.7.5/video.js"></script>
 
 
 </head>
 
 <body>
-<!-- <div class="jumbotron" style="background-image: linear-gradient(#7391ff, #625354);"> -->
-<div class="container-fluid">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="https://www.earthcube.org/">
-            <img src="images/EarthCube-White-Long-Tagline.png" height="30"
-                 class="d-inline-block align-top" alt="EarthCube" loading="lazy">
-
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-
-        <!--
-        <div class="img img-logo center"></div>
-        <h1>Simple Grid is a CSS grid for your website.</h1>
-        <h2 class="font-light">Responsive, light, simple.</h2>
-        <a href="simple-grid.zip" download>
-          <button>Download</button>
-        </a>
-          -->
-
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-            <ul class="navbar-nav mr-auto  mt-2 mt-lg-0 ">
-
-                <li class="nav-item ">
-                    <a class="nav-link" href="landing.html">Search</a>
-                </li>
-
-                <li class="nav-item active ">
-                    <a class="nav-link" href="#">Help</a>
-                </li>
-            </ul>
-
+  <div class="jumbotron" style="background-image: linear-gradient(#7391ff, #625354);">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 center">
+						<!--<img src="./img/location2.svg"> -->
+						<img src="images/EarthCube-White-Long-Tagline.png"  height="38">
+          <h3 style="margin:5px;color:white">GeoCODES</h3>
+          <h3 style="margin:5px;color:white" class="font-light">a schema.org/Dataset search</h3>
+          <!-- 
+          <div class="img img-logo center"></div>
+          <h1>Simple Grid is a CSS grid for your website.</h1>
+          <h2 class="font-light">Responsive, light, simple.</h2>
+          <a href="simple-grid.zip" download>
+            <button>Download</button>
+          </a>
+            -->
         </div>
-        <div class="navbar-text font-weight-bold">GeoCODES <span class="font-weight-normal font-italic"> a schema.org/Dataset search</span>
+
+
+      </div>
+      <div class="row">
+        <div class="col-12 center">
+          <p>
+            <a style="margin:5px;color:white " href="/index.html">home</a>
+            <a style="margin:5px;color:white " href="/search.html">search</a>
+            <a style="margin:5px;color:white " href="/about.html">about</a>
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-2 hidden-sm"></div>
+      </div>
     </div>
-    </nav>
+  </div>
 
+  <div class="body-content">
+    <div style="padding-top:0px;top:0px" class="container">
 
-    <div class="row">
+      <div class="row">
         <div class="col-2 hidden-sm"></div>
         <div class="col-8">
-            <h3 class="center m-bottom">About</h3>
+          <h3 class="center m-bottom">About</h3>
 
-            <p>
-                Documentation is in the works for this site.
-            </p>
+          <p>
+            Documentation is in the works for this site. 
+          </p>
 
-            <p>
+          <p>
 
-                <img style="width:600px" src="https://geocodes.earthcube.org/img/geodexv2.png">
-                <a href="./img/geodexv2.png">Image link</a>
-            </p>
+            <img style="width:600px" src="https://geocodes.earthcube.org/img/geodexv2.png">
+            <a href="./img/geodexv2.png">Image link</a>
+          </p>
 
 
-            <p> Exposed domains</p>
-            <pre>
+          <p> Exposed domains</p>
+          <pre>
           main:
           alpha.geodex.org
           api.geodex.org
@@ -107,25 +103,32 @@
 
         </div>
         <div class="col-2 hidden-sm"></div>
+      </div>
+
+
+
+
+
+
+
+
+
     </div>
-
-
-</div>
-<!-- <footer style="padding-bottom:5px;background-image: linear-gradient(#7391ff, #625354);"> -->
-<footer style="padding-bottom:5px;background-color: rgba(66,109,148,0.8)">
-    <!-- <div class="container"> -->
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-12">
-                <h6 style="color:white">Work on this site is supported by NSF EarthCube</h6>
-                <!-- <h6 style="color:grey">Simple Grid by <a style="color:grey" href="http://zcole.me" target="_blank">Zach Cole</a> -->
-                Open source under the <a style="color:grey" href="https://opensource.org/licenses/MIT" target="_blank">MIT
-                License</a>
-                </h6>
-            </div>
+  </div>
+  <footer style="padding-bottom:5px;background-image: linear-gradient(#7391ff, #625354);">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h6 style="color:white">Work on this site is supported by NSF EarthCube</h6>
+          <h6 style="color:grey">Simple Grid by <a style="color:grey" href="http://zcole.me" target="_blank">Zach
+              Cole</a>
+            Open source under the <a style="color:grey" href="https://opensource.org/licenses/MIT" target="_blank">MIT
+              License</a>
+          </h6>
         </div>
+      </div>
     </div>
-</footer>
+  </footer>
 </body>
 
 </html>
