--- a/alpha/website/about.html
+++ b/alpha/website/about.html
@@ -31,7 +31,9 @@
 </head>
 
 <body>
-  <div class="jumbotron" style="background-image: linear-gradient(#7391ff, #625354);">
+		<!-- <div class="jumbotron" style="background-image: linear-gradient(#7391ff, #625354);"> -->
+		<div class="container-fluid" >
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container">
       <div class="row">
         <div class="col-12 center">
@@ -65,6 +67,7 @@
       </div>
     </div>
   </div>
+
 
   <div class="body-content">
     <div style="padding-top:0px;top:0px" class="container">
