compass2 EC png

--- a/geodex/website/about.html
+++ b/geodex/website/about.html
@@ -29,7 +29,8 @@
     <div class="container">
       <div class="row">
         <div class="col-12 center">
-          <img src="./img/location2.svg">
+						<!-- <img src="./img/location2.svg"> -->
+						<img src="../../alpha/website/images/EarthCube-White-Long-Tagline.png"  height="38">
           <h3 style="margin:5px;color:white">GeoCODES</h3>
           <h3 style="margin:5px;color:white" class="font-light">a schema.org/Dataset search</h3>
           <!-- 
